--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -37,12 +37,20 @@
         app:layout_constraintStart_toStartOf="@+id/levelStar"
         app:layout_constraintEnd_toEndOf="@id/levelStar"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/levelText"
+        app:layout_constraintBottom_toTopOf="@id/scrollButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
     <ImageView
         android:id="@+id/popup"
         android:src="@drawable/popup_window"
         android:layout_width="150dp"
         android:layout_height="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/levelText"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -162,12 +170,11 @@
     <ImageView
         android:id="@+id/moneyJackpot"
         android:src="@drawable/jackpot_express_items"
-        android:paddingStart="10dp"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="@id/popupDown"
         app:layout_constraintStart_toStartOf="@id/popupDown"
-        app:layout_constraintEnd_toEndOf="@id/balanceText"/>
+        app:layout_constraintEnd_toStartOf="@id/balanceText"/>
     <TextView
         android:id="@+id/balanceText"
         android:layout_width="wrap_content"
@@ -176,9 +183,9 @@
         android:paddingBottom="15dp"
         android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="@id/popupDown"
-        app:layout_constraintStart_toEndOf="@+id/moneyJackpot"
+        app:layout_constraintStart_toStartOf="@+id/moneyJackpot"
         app:layout_constraintEnd_toEndOf="@id/popupDown"/>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <ImageView
         android:id="@+id/plus"
         android:src="@drawable/plus"
@@ -217,9 +224,9 @@
         android:id="@+id/betText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
+        android:textSize="25dp"
+        android:layout_marginBottom="5dp"
         android:textColor="@color/colorWhite"
-        android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="@id/red"
         app:layout_constraintEnd_toEndOf="@id/red"
         app:layout_constraintTop_toTopOf="@id/red"
